# ros2_fr3_gazebo

./: .gitignore  Arm64_Setup.md  FR_ROS2_API.md  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/fairino3_v6_moveit2_config/share/fairino3_v6_moveit2_config/: package.sh
install/fairino_description/share/fairino_description/: package.sh
install/fairino_hardware/lib/: libfairino.so.2
install/fairino_hardware/lib/fairino_hardware/: srv_test_client
install/fairino_hardware/share/ament_index/resource_index/parent_prefix_path/: fairino_hardware
install/fairino_hardware/share/fairino_hardware/: local_setup.sh  package.sh
install/fairino_hardware/share/fairino_hardware/cmake/: fairino_hardwareExport.cmake
install/fairino_msgs/include/fairino_msgs/fairino_msgs/msg/detail/: robot_nonrt_state__type_support.c  robot_nonrt_state__type_support.cpp
install/fairino_msgs/local/lib/python3.10/dist-packages/fairino_msgs/msg/: _robot_nonrt_state.py  _robot_nonrt_state_s.c
install/fairino_msgs/share/fairino_msgs/: package.sh
install/fairino_msgs/share/fairino_msgs/msg/: RobotNonrtState.idl
log/: latest_build
src/: API说明.md  README.md
src/fairino10_v6_moveit2_config/: package.xml
src/fairino10_v6_moveit2_config/config/: fairino10_v6_robot.ros2_control.xacro  ros2_controllers.yaml
src/fairino10_v6_moveit2_config/launch/: digitial_fr10_gazebo_sim.launch.py  fr10_gazebo_mirror.launch.py  fr10_gazebo_sim.launch.py
src/fairino16_v6_moveit2_config/: package.xml
src/fairino16_v6_moveit2_config/config/: fairino16_v6_robot.ros2_control.xacro  ros2_controllers.yaml
src/fairino16_v6_moveit2_config/launch/: digitial_fr16_gazebo_sim.launch.py  fr16_gazebo_mirror.launch.py  fr16_gazebo_sim.launch.py
src/fairino20_v6_moveit2_config/: package.xml
src/fairino20_v6_moveit2_config/config/: fairino20_v6_robot.ros2_control.xacro  ros2_controllers.yaml
src/fairino20_v6_moveit2_config/launch/: digitial_fr20_gazebo_sim.launch.py  fr20_gazebo_mirror.launch.py  fr20_gazebo_sim.launch.py
src/fairino30_v6_moveit2_config/: package.xml
src/fairino30_v6_moveit2_config/config/: fairino30_v6_robot.ros2_control.xacro  ros2_controllers.yaml
src/fairino30_v6_moveit2_config/launch/: digitial_fr30_gazebo_sim.launch.py  fr30_gazebo_mirror.launch.py  fr30_gazebo_sim.launch.py
src/fairino3_v6_moveit2_config/: CMakeLists.txt  package.xml
src/fairino3_v6_moveit2_config/config/: fairino3_v6_robot.ros2_control.xacro  fairino3_v6_robot.urdf.xacro  ros2_controllers.yaml
src/fairino3_v6_moveit2_config/launch/: SimJointPublisher.py  digitial_fr3_gazebo_sim.launch.py  fr3_gazebo_mirror.launch.py  fr3_gazebo_sim.launch.py  rsp.launch.py
src/fairino5_v6_moveit2_config/: CMakeLists.txt  package.xml
src/fairino5_v6_moveit2_config/config/: fairino5_v6_robot.ros2_control.xacro  ros2_controllers.yaml
src/fairino5_v6_moveit2_config/launch/: digitial_fr5_gazebo.launch.py  digitial_fr5_gazebo_sim.launch.py  fr5_gazebo_mirror.launch.py  fr5_gazebo_sim.launch.py  move_group.launch.py  moveit_planning.launch.py  moveit_traj_test.cpp  send_trajectory.launch.py
src/fairino_description/urdf/: fairino10_v6.urdf  fairino16_v6.urdf  fairino20_v6.urdf  fairino30_v6.urdf  fairino3_mt_v6.urdf  fairino3_v6.urdf  fairino5_v6.urdf
src/fairino_gazebo_config/: CMakeLists.txt  package.xml
src/fairino_gazebo_config/launch/: DigitalTwin_rsp.py  SimJointPublisher.py  gazebo_world_to_moveit.cpp  gazebo_world_to_moveit.py  rt_state_data.py  sim_trajectory_pub.py
src/fairino_gazebo_config/src/: gazebo_world_to_moveit.cpp  gazebo_world_to_moveit.py
src/fairino_hardware/: CMakeLists.txt  fairino_remotecmdinterface_para.yaml
src/fairino_hardware/examples/src/: test_msg.py
src/fairino_hardware/include/fairino_hardware/: data_type_def.h  fairino_hardware_interface.hpp  version_control.h
src/fairino_hardware/libfairino/lib/: libfairino.so.2
src/fairino_hardware/src/: command_server.cpp  command_server_node.cpp  test_msg.py
