<?xml version="1.0"?>
<package format="3">
  <name>fairino_gazebo_config</name>
  <version>0.3.0</version>
  <description>
    Configuration and simulation utilities for the Fairino3 V6 robot in Gazebo and MoveIt2.
  </description>

  <maintainer email="litao@frtech.fr">litao</maintainer>
  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="repository">https://github.com/ros-planning/moveit2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros_control</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>ros_gz</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
